[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/dirt_E.png" type="Texture" id=1]
[ext_resource path="res://Assets/dirtTiles_W.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/stoneWallAged_E.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Controller/SpawnController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/_textures/skill.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/_textures/skillBar.jpg" type="Texture" id=7]
[ext_resource path="res://GUI.gd" type="Script" id=8]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 160, 192, 0, 256, 0, 64, 160, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 192, 160, 128, 160, 192, 0, 256 )

[sub_resource type="TileSet" id=1]
0/name = "dirtTiles_W.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 352, 256, 160 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "dirt_E.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 352, 256, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "stoneWallAged_E.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 224, 160, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 2 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="Dungeon" type="Node2D"]

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Skillbar" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="Background" type="TextureRect" parent="GUI/Skillbar"]
margin_left = -202.0
margin_top = -40.0
margin_right = 298.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
rect_clip_content = true
texture = ExtResource( 7 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Skillbar/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 10.0

[node name="Skill1" type="TextureRect" parent="GUI/Skillbar/Background/HBoxContainer"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 63.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true

[node name="TextureButton" type="TextureButton" parent="GUI/Skillbar/Background/HBoxContainer/Skill1" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Skill2" type="TextureRect" parent="GUI/Skillbar/Background/HBoxContainer"]
margin_left = 64.0
margin_top = 3.0
margin_right = 124.0
margin_bottom = 63.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true

[node name="TextureButton" type="TextureButton" parent="GUI/Skillbar/Background/HBoxContainer/Skill2" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Skill3" type="TextureRect" parent="GUI/Skillbar/Background/HBoxContainer"]
margin_left = 128.0
margin_top = 3.0
margin_right = 188.0
margin_bottom = 63.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true

[node name="TextureButton" type="TextureButton" parent="GUI/Skillbar/Background/HBoxContainer/Skill3" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="YSort" type="YSort" parent="."]

[node name="TileMap2" type="TileMap" parent="YSort"]
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 128 )
cell_tile_origin = 2
cell_y_sort = true
collision_layer = 8
format = 1
tile_data = PoolIntArray( 851975, 2, 0, 851979, 2, 0, 917510, 2, 0, 1048583, 2, 0, 1114122, 2, 0, 1376272, 0, 0, 1441800, 0, 0 )

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -622, 1575 )

[node name="TileMap" type="TileMap" parent="YSort"]
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 128 )
format = 1
tile_data = PoolIntArray( 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524298, 0, 0, 524299, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 1, 0, 720905, 1, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 1, 0, 917510, 1, 0, 917511, 0, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 0, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0 )

[node name="SpawnController" parent="." instance=ExtResource( 5 )]
